security: complete rewrite from scratch (simplified unified pattern)