@@ -1,76 +1,36 @@
 package az.fitnest.iam.config;
 
 import az.fitnest.iam.security.FitnestSecurityFilter;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import lombok.RequiredArgsConstructor;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.firewall.DefaultHttpFirewall;
-import org.springframework.security.web.firewall.HttpFirewall;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 /**
- * Security configuration for iam-service.
- * 
- * Uses a single SecurityFilterChain with proper request matchers (AntPathRequestMatcher).
- * Protects internal endpoints using InternalEndpointFilter.
+ * Simplified, monolithic security configuration for iam-service.
  */
-@Slf4j
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
-@RequiredArgsConstructor
+@Slf4j
 public class SecurityConfig {
 
-    private final ObjectMapper objectMapper;
-
     @Bean
-    @org.springframework.core.annotation.Order(1)
-    public SecurityFilterChain internalSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.warn(">>> [NUCLEAR] LOADING INTERNAL SECURITY CHAIN - PRIORITY 1 <<<");
-        
-        http
-            .securityMatcher(new AntPathRequestMatcher("/api/v1/internal/**"))
-            .csrf(AbstractHttpConfigurer::disable)
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .anyRequest().hasRole("INTERNAL")
-            )
-            .addFilterBefore(
-                new az.fitnest.iam.security.FitnestSecurityFilter(),
-                UsernamePasswordAuthenticationFilter.class
-            );
-        
-        return http.build();
-    }
-
-    @Bean
-    @org.springframework.core.annotation.Order(2)
-    public SecurityFilterChain externalSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.info(">>> LOADING EXTERNAL SECURITY CHAIN - PRIORITY 2 <<<");
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        log.info(">>> LOADING UNIFIED SECURITY CHAIN <<<");
         
         http
             .csrf(AbstractHttpConfigurer::disable)
@@ -79,91 +39,50 @@ public class SecurityConfig {
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authorizeHttpRequests(auth -> auth
-                // PUBLIC ENDPOINTS
-                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/login")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/refresh")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/otp/**")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/register")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/register/complete")).permitAll()
+                // 1. Internal APIs - Require ROLE_INTERNAL
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/internal/**")).hasRole("INTERNAL")
                 
-                .requestMatchers(new AntPathRequestMatcher("/swagger-ui.html")).permitAll()
+                // 2. Public Endpoints
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/login")).permitAll()
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/register-request")).permitAll()
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/verify-otp")).permitAll()
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/auth/resend-otp")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/swagger-ui/**")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/v3/api-docs/**")).permitAll()
-                
                 .requestMatchers(new AntPathRequestMatcher("/actuator/**")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/health/**")).permitAll()
                 
-                .requestMatchers(new AntPathRequestMatcher("/error")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/**", HttpMethod.OPTIONS.name())).permitAll()
-                
+                // 3. All other requests - Authenticated (ROLE_USER)
                 .anyRequest().authenticated()
             )
             .exceptionHandling(ex -> ex
-                .authenticationEntryPoint(authenticationEntryPoint())
-                .accessDeniedHandler(accessDeniedHandler())
+                .authenticationEntryPoint((request, response, authException) -> {
+                    log.debug("Unified Security: Unauthorized to {} from {}", request.getRequestURI(), request.getRemoteAddr());
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.setContentType("application/json");
+                    response.getWriter().write("{\"error\":\"Unauthorized\"}");
+                })
+                .accessDeniedHandler((request, response, accessDeniedException) -> {
+                    log.warn("Unified Security: Access Denied to {} from {}", request.getRequestURI(), request.getRemoteAddr());
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                    response.setContentType("application/json");
+                    response.getWriter().write("{\"error\":\"Forbidden\"}");
+                })
             )
-            .addFilterBefore(
-                new az.fitnest.iam.security.FitnestSecurityFilter(),
-                UsernamePasswordAuthenticationFilter.class
-            );
-        
+            .addFilterBefore(new FitnestSecurityFilter(), UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
-        ));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of(
-            "Authorization", "X-User-Id", "X-User-Email", "X-User-Roles", "X-Request-ID"
-        ));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setExposedHeaders(List.of("*"));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
-
-    @Bean
-    public AuthenticationEntryPoint authenticationEntryPoint() {
-        return (request, response, authException) -> {
-            response.setStatus(HttpStatus.UNAUTHORIZED.value());
-            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", 401);
-            error.put("error", "Unauthorized");
-            error.put("message", "Authentication required");
-            error.put("path", request.getRequestURI());
-            objectMapper.writeValue(response.getWriter(), error);
-        };
-    }
-
-    @Bean
-    public AccessDeniedHandler accessDeniedHandler() {
-        return (request, response, accessDeniedException) -> {
-            response.setStatus(HttpStatus.FORBIDDEN.value());
-            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-            Map<String, Object> error = new HashMap<>();
-            error.put("status", 403);
-            error.put("error", "Forbidden");
-            error.put("message", accessDeniedException.getMessage());
-            error.put("path", request.getRequestURI());
-            objectMapper.writeValue(response.getWriter(), error);
-        };
-    }
-
-    @Bean
-    public HttpFirewall httpFirewall() {
-        return new DefaultHttpFirewall();
     }
 }
